--- a/index.css
+++ b/index.css
@@ -91,6 +91,7 @@ nav{
     z-index:100;
 }
 
+
 nav ul{
     list-style-type: none;
     padding-left: 30px;
@@ -111,4 +112,9 @@ nav ul li+li{
 }
 nav ul li+li+li{
     margin-left: 30px;
+ }
+
+ .container.container.show_nav .circle{
+    transform: rotate(-70deg);
+
  }
